src/test/ui/hygiene/cross-crate-name-hiding-2.stderr
error[E0422]: cannot find struct, variant or union type `MyStruct` in this scope
  --> $DIR/cross-crate-name-hiding-2.rs:13:13
   |
LL |     let x = MyStruct {};
   |             ^^^^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0422`.
